--- a/.github/workflows/smhi_weather.yml
+++ b/.github/workflows/smhi_weather.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: Smhi_weather
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
   pull_request:
     branches:
       - main
-  workflow_dispatch:  # Enables manual trigger with parameters
+  workflow_dispatch:  # Enables manual trigger with parameters 
     inputs:
       log_errors:
         description: 'Log errors if tests fail'
@@ -25,44 +25,15 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x'
+          python-version: '3.11.5'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Verify tests directory
+        run: ls -la  # Lists files and confirms 'tests' directory presence in the root
+
       - name: Run unit tests
         run: python -m unittest discover -s tests
-
-  build-and-publish:
-    needs: test  # Runs only if the 'test' job passes
-    runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.log_errors == 'true' }}
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Build Docker image
-        run: |
-          docker build -t arees313/flask-app:latest .
-
-      - name: Log in to DockerHub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
-      - name: Publish Docker image
-        run: docker push Arees313/flask-app:latest
-
-  deploy:
-    needs: build-and-publish  # Runs only if 'build-and-publish' job passes
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Deploy to Azure
-        env:
-          AZURE_WEBAPP_NAME: your-app-name
-          AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
-        run: |
-          # Deploy Docker image to Azure App Service
-          az webapp config container set --name $AZURE_WEBAPP_NAME --resource-group your-resource-group --docker-custom-image-name yourusername/flask-app:latest
