--- a/.github/workflows/smhi_weather.yml
+++ b/.github/workflows/smhi_weather.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
     branches:
       - main
-  workflow_dispatch:  # Enables manual trigger with parameters 
+  workflow_dispatch:  # Enables manual trigger with parameters
     inputs:
       log_errors:
         description: 'Log errors if tests fail'
@@ -37,3 +37,28 @@ jobs:
 
       - name: Run unit tests
         run: python -m unittest discover -s tests
+
+  dockerhub:
+    runs-on: ubuntu-latest
+    needs: test  # Ensures 'dockerhub' job runs after 'test' job
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build Docker image
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/smhi_weather_app:latest .
+
+      - name: Push Docker image to Docker Hub
+        run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/smhi_weather_app:latest
