--- a/.github/workflows/smhi_weather.yml
+++ b/.github/workflows/smhi_weather.yml
@@ -57,8 +57,9 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/smhi_weather_app:latest .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/weatherapp:latest .
 
-      - name: Push Docker image to Docker Hub
+      - name: Build Docker image
         run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/smhi_weather_app:latest
+            docker build -t ${{ secrets.DOCKER_USERNAME }}/weatherapp:latest .
+        
