--- a/.github/workflows/smhi_weather.yml
+++ b/.github/workflows/smhi_weather.yml
@@ -58,4 +58,7 @@ jobs:
       - name: Build Docker image
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/weatherapp:latest .
-
+          
+      - name: Push Docker image to Docker Hub
+        run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/weatherapp:latest
