--- a/.github/workflows/smhi_weather.yml
+++ b/.github/workflows/smhi_weather.yml
@@ -76,9 +76,9 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/weatherapp:smhi .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/weatherapp:latest .
           
       - name: Push Docker image to Docker Hub
         run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/weatherapp:smhi .
+          docker push ${{ secrets.DOCKER_USERNAME }}/weatherapp:latest .
 
