--- a/.github/workflows/smhi_weather.yml
+++ b/.github/workflows/smhi_weather.yml
@@ -80,5 +80,5 @@ jobs:
           
       - name: Push Docker image to Docker Hub
         run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/weatherapp:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/weatherapp:latest
 
